POMs: removed profiles extratest/conntest, tests driven by properties
Main reason/benefit is that all tests are compiled now, no sources are
excluded because of inactive Maven profile.
To run tests from a module, add option like: -DskipConnTests=false
See comments in testing/pom.xml for explanation.